card-service/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: carr-service-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - http:
        paths:
          - path: /card-service/*
            backend:
             serviceName: card-service
             servicePort: 8000
